--- a/src/app.css
+++ b/src/app.css
@@ -38,9 +38,15 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 4em;
+  line-height: 1.2;
 }
+
+h2 {
+  font-size: 2em;
+  line-height: 1.2;
+}
+
 
 .card {
   padding: 2em;
